deploy/kubernetes/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockvisor-ui
  labels:
    app: blockvisor-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockvisor-ui
  template:
    metadata:
      name: blockvisor-ui
      labels:
        app: blockvisor-ui
    spec:
      containers:
        - name: blockvisor-ui
          image: us-docker.pkg.dev/blockjoy-deployer/blockvisor-ui/blockvisor-ui
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: listener-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: blockvisor-ui
spec:
  type: NodePort
  selector:
    app: blockvisor-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: listener-port
---
