deploy/kubernetes/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockvisor-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: blockvisor-ui
    networking.gke.io/managed-certificates: blockvisor-ui
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: blockvisor-ui
      port:
        number: 3000
---
